# cmd/avito_back_intership/main.go
@@ -73,10 +73,10 @@ func main() {
 	router.Post("/segment", create_segment.New(log, storage))
 	// Удаляет сегмент
 	router.Delete("/segment", delete_segment.New(log, storage))
-	// Получает список пользователей в данном сегменте
-	router.Get("/segment/{segment}", segment_users.New(log, storage))
 	// Получает список всех сегментов
 	router.Get("/segment", segment_list.New(log, storage))
+	// Получает список пользователей в данном сегменте
+	router.Get("/segment/{segment}", segment_users.New(log, storage))
 
 	// Создает юзера с 0 или более сегментами тут же происходит удаление
 	router.Post("/user", create_user.New(log, storage))
