# docs/swagger.json
@@ -13,6 +13,34 @@
     "host": "localhost:8002",
     "paths": {
         "/segment": {
+            "get": {
+                "description": "Получения списка всех сегментов",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Segment"
+                ],
+                "summary": "Получения списка всех сегментов",
+                "operationId": "segment-list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/segment_list.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/segment_list.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Создание сегмента",
                 "consumes": [
@@ -29,7 +57,7 @@
                 "parameters": [
                     {
                         "description": "segment name",
-                        "name": "input",
+                        "name": "segment",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -37,7 +65,98 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/create_segment.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/create_segment.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Удаление сегмента",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Segment"
+                ],
+                "summary": "Удаление сегмента",
+                "operationId": "segment-deletion",
+                "parameters": [
+                    {
+                        "description": "segment name",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/delete_segment.Request"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/delete_segment.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/delete_segment.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/segment/{segment}": {
+            "get": {
+                "description": "Получение всех пользователей в данном сегменте",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Segment"
+                ],
+                "summary": "Получение всех пользователей в данном сегменте",
+                "operationId": "segment-user-list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "segment name",
+                        "name": "segment",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/segment_users.Response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/segment_users.Response"
+                        }
+                    }
+                }
             }
         }
     },
@@ -48,11 +167,78 @@
                 "segment"
             ],
             "properties": {
-                "amount": {
+                "percentage": {
                     "type": "string"
                 },
                 "segment": {
                     "type": "string"
+                }
+            }
+        },
+        "create_segment.Response": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "delete_segment.Request": {
+            "type": "object",
+            "required": [
+                "segment"
+            ],
+            "properties": {
+                "segment": {
+                    "type": "string"
+                }
+            }
+        },
+        "delete_segment.Response": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "segment_list.Response": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "segmentList": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "segment_users.Response": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "userList": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
