# internal/http-server/handlers/segment/segment_list/segment_list.go
@@ -1,20 +1,21 @@
 package segment_list
 
 import (
+	"avito_back_intership/internal/lib/api/response"
 	"database/sql"
 	"net/http"
 
 	"log/slog"
 
-	resp "avito_back_intership/internal/lib/api/response"
-	"avito_back_intership/internal/lib/csv"
+	// response "avito_back_intership/internal/lib/api/response"
 
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/render"
 )
 
 type Response struct {
-	resp.Response
+	SegmentList []string
+	response.Response
 }
 
 //go:generate mockery --name=URLSaver
@@ -22,6 +23,15 @@ type SegmentListGetter interface {
 	SegmentList() (*sql.Rows, error)
 }
 
+// @Summary			Получения списка всех сегментов
+// @Tags			Segment
+// @Description		Получения списка всех сегментов
+// @ID				segment-list
+// @Accept			json
+// @Produce			json
+// @Success			200		{object}	Response
+// @Failure			default	{object}	Response
+// @Router			/segment [get]
 func New(log *slog.Logger, segmentListGetter SegmentListGetter) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.segment.segment_list_getter.New"
@@ -33,21 +43,29 @@ func New(log *slog.Logger, segmentListGetter SegmentListGetter) http.HandlerFunc
 		rows, err := segmentListGetter.SegmentList()
 		if err != nil {
 			log.Error("failed to get list of segments")
-			render.JSON(w, r, resp.Error("failed to get list of segments"))
+			render.JSON(w, r, response.Error("failed to get list of segments"))
 			return
 		}
 
-		err = csv.CreateCSV(log, "segments.csv", rows)
-		if err != nil {
-			log.Error("failed to create csv")
-			render.JSON(w, r, resp.Error("failed to create csv"))
-			return
+		var segmentList []string
+		for rows.Next() {
+			var one_row string
+			rows.Scan(&one_row)
+			segmentList = append(segmentList, one_row)
 		}
 
-		log.Info("csv file created")
 		render.JSON(w, r, Response{
-			Response: resp.OK(),
+			SegmentList: segmentList,
+			Response:    response.OK(),
 		})
+
+		// err = csv.CreateCSV(log, "segments.csv", rows)
+		// if err != nil {
+		// 	log.Error("failed to create csv")
+		// 	render.JSON(w, r, response.Error("failed to create csv"))
+		// 	return
+		// }
+
 	}
 
 }
